--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookie Clicker</title>
+    <title>Space Clicker</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -34,11 +34,23 @@
 
         <section id="shop">
             <h2>Magasin</h2>
+            <div class="shop-item" id="clickUpgrade" data-name="Amélioration Click" data-base-cost="30" data-level="0">
+                Amélioration Click (30 points) - Ajoute +1 par click
+            </div>
             <div class="shop-item" id="autoClicker1" data-name="Petit Clicker" data-base-cost="10" data-effect="1" data-level="0">
                 Petit Clicker (10 points) - Ajoute 1 point/seconde
             </div>
             <div class="shop-item" id="autoClicker2" data-name="Super Clicker" data-base-cost="50" data-effect="5" data-level="0">
                 Super Clicker (50 points) - Ajoute 5 points/seconde
+            </div>
+            <div class="shop-item" id="autoClicker3" data-name="Mega Clicker" data-base-cost="100" data-effect="20" data-level="0">
+                Mega Clicker (100 points) - Ajoute 20 points/seconde
+            </div>
+            <div class="shop-item" id="autoClicker3" data-name="Mega Clicker" data-base-cost="100" data-effect="20" data-level="0">
+                Mega Clicker (100 points) - Ajoute 20 points/seconde
+            </div>
+            <div class="shop-item" id="autoClicker3" data-name="Mega Clicker" data-base-cost="100" data-effect="20" data-level="0">
+                Mega Clicker (100 points) - Ajoute 20 points/seconde
             </div>
             <div class="shop-item" id="autoClicker3" data-name="Mega Clicker" data-base-cost="100" data-effect="20" data-level="0">
                 Mega Clicker (100 points) - Ajoute 20 points/seconde
